# ocr-ollama

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  docker-bake.hcl  docker-compose.glm-ocr.yml  docker-compose.vllm-publish.yml  docker-compose.yml  free_gpu.py  main.py  pyproject.toml  verify_engines.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  docling_client.py  doctr_client.py  easyocr_client.py  engine_registry.py  feature_tags.py  gpu_device_assignments_store.py  gpu_stats.py  history.py  lanyocr_client.py  liteparse_client.py  main.py  mineru_client.py  model_availability.py  model_catalog.py  model_vram.py  nemotron_client.py  ocr_service.py  ollama_client.py  onnxtr_client.py  paddleocr_client.py  product_scan.py  prompts.py  rapidocr_client.py  samples.py  scan_service.py  settings_store.py  tesseract_client.py  vllm_client.py  vllm_compose.py  vllm_registry.py
backend/app/inference/: __init__.py  classify.py  factory.py  structured.py
backend/app/schemas/: __init__.py  scan.py
backend/config/: model_vram_estimates.json  ocr_engines.json  ollama_model_tags.json  prompts.json  vllm_endpoints.json
backend/tests/: test_model_vram.py
docker/: Dockerfile.base-cv  Dockerfile.base-torch-cpu  Dockerfile.cpu-ocr-sidecars  Dockerfile.docling  Dockerfile.doctr  Dockerfile.easyocr  Dockerfile.lanyocr  Dockerfile.mineru-diffusion  Dockerfile.nemotron-ocr  Dockerfile.onnxtr  Dockerfile.paddleocr  Dockerfile.rapidocr  Dockerfile.vllm-ocr  vllm-entrypoint.sh  vllm-omni-entrypoint.sh
frontend/: index.html  (+4 more)
(+131 files in other folders)
