[project]
name = "ocr-ollama-backend"
version = "0.1.0"
description = "FastAPI backend for OCR Ollama"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
package = false
